--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     environment:
       SPLUNK_START_ARGS: --accept-license --answer-yes
       SPLUNK_FORWARD_SERVER: splunkenterprise:9997
-      SPLUNK_CMD: 'splunk set deploy-poll 172.19.0.3:8089 -auth admin:changeme'
+      #SPLUNK_CMD: 'splunk set deploy-poll splunkenterprise:8089 -auth admin:changeme'
     links:
       - splunk
     ports:
@@ -49,7 +49,7 @@ services:
       driver: splunk
       options:
         splunk-token: "5f331d48-a7aa-48da-b19e-e06c794bffce"
-        splunk-url: "http://172.19.0.3:8088"
+        splunk-url: "http://172.18.0.2:8088"
         splunk-insecureskipverify: "true"
         tag: "{{.ImageName}}/{{.Name}}/{{.ID}}"
         labels: "splunkuf"
@@ -67,7 +67,7 @@ services:
       driver: splunk
       options:
         splunk-token: "5f331d48-a7aa-48da-b19e-e06c794bffce"
-        splunk-url: "http://172.19.0.3:8088"
+        splunk-url: "http://172.18.0.2:8088"
         splunk-insecureskipverify: "true"
         tag: "{{.ImageName}}/{{.Name}}/{{.ID}}"
         labels: "nginx"
